--- a/Template.WebApp/Template.WebApp.csproj
+++ b/Template.WebApp/Template.WebApp.csproj
@@ -10,6 +10,12 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Api.Analyzers" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
         <PackageReference Include="NSwag.AspNetCore" Version="12.0.13" />
+        <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+        <PackageReference Include="Serilog.Enrichers.Demystify" Version="0.1.0-dev-00016" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
+        <PackageReference Include="Serilog.Sinks.Async" Version="1.3.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     </ItemGroup>
 
 </Project>
