Basic work on Persistence and Domain layers

--- a/src/Template.WebApp/appsettings.json
+++ b/src/Template.WebApp/appsettings.json
@@ -8,5 +8,8 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Template;Username=user;Password=12345"
+  }
 }
