--- a/src/Template.WebApp/Template.WebApp.csproj
+++ b/src/Template.WebApp/Template.WebApp.csproj
@@ -16,6 +16,11 @@
         <PackageReference Include="Serilog.Sinks.Async" Version="1.3.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Template.Persistence\Template.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
