Addded the basic Application layer

--- a/src/Template.WebApp/Template.WebApp.csproj
+++ b/src/Template.WebApp/Template.WebApp.csproj
@@ -6,6 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="8.2.2" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Api.Analyzers" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
@@ -20,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Template.Application\Template.Application.csproj" />
       <ProjectReference Include="..\Template.Persistence\Template.Persistence.csproj" />
     </ItemGroup>
 
