--- a/src/Template.WebApp/Template.WebApp.csproj
+++ b/src/Template.WebApp/Template.WebApp.csproj
@@ -27,4 +27,8 @@
       <ProjectReference Include="..\Template.Persistence\Template.Persistence.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Logs" />
+    </ItemGroup>
+
 </Project>
