--- a/src/Auth.WebApp/appsettings.json
+++ b/src/Auth.WebApp/appsettings.json
@@ -9,6 +9,7 @@
     }
   },
   "AllowedHosts": "*",
+  "spaRoot": "http://localhost:4200",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=Auth;Username=user;Password=12345"
   }
