Modified project to better accept docker hosting

--- a/src/Auth.WebApp/appsettings.Development.json
+++ b/src/Auth.WebApp/appsettings.Development.json
@@ -1,3 +1,5 @@
 {
-  
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Auth;Username=user;Password=12345"
+  }
 }
