--- a/src/Auth.WebApp/appsettings.json
+++ b/src/Auth.WebApp/appsettings.json
@@ -11,6 +11,6 @@
   "AllowedHosts": "*",
   "spaRoot": "http://localhost:4200",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=Auth;Username=user;Password=12345"
+    "DefaultConnection": "Host=postgres-auth;Port=5432;Database=Auth;Username=user;Password=12345"
   }
 }
