--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
 
   auth:
     image: auth:latest
-    build: '.'
+    build: 
+      context: '.'
+      dockerfile: 'Dockerfile'
     environment:
       ConnectionStrings__DefaultConnection: 'Host=postgres-auth;Port=5432;Database=Auth;Username=${POSTGRES_USER:-user};Password=${POSTGRES_PASSWORD:-12345}'
     logging:
