Added http client to communicate with events-core
and fitted auth to core

--- a/src/Auth.WebApp/appsettings.Development.json
+++ b/src/Auth.WebApp/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=Auth;Username=user;Password=12345"
-  }
+  },
+  "eventsCoreUrl": "http://localhost:8080"
 }
