--- a/src/Auth.WebApp/appsettings.json
+++ b/src/Auth.WebApp/appsettings.json
@@ -10,6 +10,7 @@
   },
   "AllowedHosts": "*",
   "spaRoot": "http://localhost:4200",
+  "eventsCoreUrl": "http://evets-core:8080",
   "ConnectionStrings": {
     "DefaultConnection": "Host=postgres-auth;Port=5432;Database=Auth;Username=user;Password=12345"
   }
